--- a/public/HemanthMovies.html
+++ b/public/HemanthMovies.html
@@ -1,10 +1,31 @@
 <!-- Write your code below -->
- <h1> Best Movies according to Hemanth </h1>
- <h2>My top movies of all time </h2>
- <hr />
- <h3>Harry potter and the socers stone </h3>
- <p>Harry is found here</p>
- <h3>Harry potter and the Chamber of Secrets </h3>
- <p>Harry fights with tom riddle</p>
- <h3>Harry potter and the prison of askban</h3>
- <p>Harry finds Serius black there</p>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../style.css" />
+
+
+ </head>
+ <body>
+    <div class="title">
+    <h1> Best Movies according to Hemanth </h1>
+    <h2>My top movies of all time </h2>
+    </div>
+    <hr />
+    <div class="movienames">
+    <h3>Harry potter and the socers stone </h3>
+    <p>Harry is found here</p>
+    <img src="../assets/images/harrypotter and the socers stone.jpeg" />
+    <h3>Harry potter and the prison of askban</h3>
+    <p>Harry finds Serius black there</p> 
+    <img src="../assets/images/harrypotter and the prison of askban.jpeg" />
+    <h3>Harry potter and the Deathly hallows part 2 </h3>
+    <p>The twist at the ending leaves audiance in dumbfounded </p> 
+    <img src="../assets/images/harrypotter and the deathly hallows part-2.jpeg" />
+    </div>  
+ </body>
+ </html>
+ 
