--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-httpb/HTML/Element/img#attr-height s://developer.mozilla.org/en-US/docs/We-->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
  <!DOCTYPE html>
  <html lang="en">
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
+    <link rel="stylesheet" href="./style.css" />
+    
  </head>
  <body>
+   <div class="title">
     <h1>Hemanth website</h1>
     <h2>contents</h2>
+    </div>
  <hr />
- <a href="./public/index.html">Harry potter movies </a>
+ <a href="./public/HemanthMovies.html">Harry potter movies </a>
  <br />
  <br />
  <img src="./assets/images/movies of hemanth.png" height="400">
