--- a/public/HemanthMovies.html
+++ b/public/HemanthMovies.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style.css" />
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Hachi+Maru+Pop&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans+KR:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</style>
  </head>
+<style>
+   .img{
+      position:relative;
+      left:300px;
+   }
+
+h3{
+   font-size:xx-large;
+}
+h3{
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  }
+</style>
+ 
  <body>
     <div class="title">
     <h1> Best Movies according to Hemanth </h1>
@@ -16,15 +35,20 @@
     </div>
     <hr />
     <div class="movienames">
-    <h3>Harry potter and the socers stone </h3>
-    <p>Harry is found here</p>
-    <img src="../assets/images/harrypotter and the socers stone.jpeg" />
-    <h3>Harry potter and the prison of askban</h3>
-    <p>Harry finds Serius black there</p> 
-    <img src="../assets/images/harrypotter and the prison of askban.jpeg" />
-    <h3>Harry potter and the Deathly hallows part 2 </h3>
-    <p>The twist at the ending leaves audiance in dumbfounded </p> 
-    <img src="../assets/images/harrypotter and the deathly hallows part-2.jpeg" />
+            <h3>Harry potter and the socers stone </h3>
+             <p>Harry is found here</p>
+    <div class="img">
+        <img src="../assets/images/harrypotter and the socers stone.jpeg" />
+   </div>
+          <h3>Harry potter and the prison of askban</h3>
+          <p>Harry finds Serius black there</p>
+    <div class="img">
+       <img src="../assets/images/harrypotter and the prison of askban.jpeg" />
+    </div>
+           <h3>Harry potter and the Deathly hallows part 2 </h3>
+           <p>The twist at the ending leaves audiance in dumbfounded </p> 
+    <div class="img">
+        <img src="../assets/images/harrypotter and the deathly hallows part-2.jpeg" />
     </div>  
  </body>
  </html>
