--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
     <h2>contents</h2>
     </div>
  <hr />
+ <div  class="index-image">
+
  <a href="./public/HemanthMovies.html">Harry potter movies </a>
  <br />
  <br />
- <img src="./assets/images/movies of hemanth.png" height="400">
+ <img  src="./assets/images/movies of hemanth.png" height="400" >
  <br />
+ <br />
+ <div />
+ <div  class="index-image">
  <a href="./assets/images/index.html">My birthday invite</a>
  <br />
  <br />
- <img src="./assets/images/Hemanth birthday.png "alt="birthday invite"height="400">
+ <img  src="./assets/images/Hemanth birthday.png "alt="birthday invite"height="400">
  <br />
+</div>
+<br />
 <a href="./public/about.html">about</a>
 <a href="./public/contact.html">contact me</a>
  </body>
