--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
  <hr />
  <div  class="index-image">
 
- <a href="./public/HemanthMovies.html">Harry potter movies </a>
+ <a href="./public/HemanthMovies.html">My Favorite movies </a>
  <br />
  <br />
- <img  src="./assets/images/movies of hemanth.png" height="400" >
+ <a href="./public/HemanthMovies.html"><img  src="./assets/images/My movies.png" height="250" width="300"></a>
  <br />
  <br />
  <div />
